--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="A simple web metronome application" />
+    <meta
+      name="description"
+      content="A simple, lightweight metronome that has everything you need for practicing."
+    />
     <meta name="keywords" content="metronome, web metronome, music, BPM" />
     <meta name="author" content="Jeon Jaewon" />
-    <title>Simple web metronome</title>
+    <title>Simple Metronome</title>
   </head>
   <body>
     <div id="root"></div>
