--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A simple, lightweight metronome that has everything you need for practicing."
+      content="A free, simple, lightweight metronome that has everything you need for practicing."
     />
     <meta name="keywords" content="metronome, web metronome, music, BPM" />
     <meta name="author" content="Jeon Jaewon" />
