--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
     />
     <meta name="keywords" content="metronome, web metronome, music, BPM" />
     <meta name="author" content="Jeon Jaewon" />
-    <meta property="og:title" content="Simple Online Metronome - Free & Accurate" />
-    <meta property="og:description" content="A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use." />
+    <meta
+      property="og:title"
+      content="Simple Online Metronome - Free & Accurate"
+    />
+    <meta
+      property="og:description"
+      content="A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jeonjaewon.github.io/web-metronome" />
-    <meta property="og:image" content="https://jeonjaewon.github.io/web-metronome/vite.svg" />
+    <meta
+      property="og:url"
+      content="https://jeonjaewon.github.io/web-metronome"
+    />
+    <meta
+      property="og:image"
+      content="https://jeonjaewon.github.io/web-metronome/og.jpeg"
+    />
     <link rel="canonical" href="https://jeonjaewon.github.io/web-metronome" />
     <title>Simple Online Metronome - Free & Accurate</title>
   </head>
