--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use."
+      content="A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use. Also provides a guitar scale chart."
     />
     <meta name="keywords" content="metronome, web metronome, music, BPM" />
     <meta name="author" content="Jeon Jaewon" />
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:description"
-      content="A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use."
+      content="A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use. Also provides a guitar scale chart."
     />
     <meta property="og:type" content="website" />
     <meta
