Update keywords meta tag to include guitar scales and instruments

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       name="description"
       content="A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use. Also provides a guitar scale chart."
     />
-    <meta name="keywords" content="metronome, web metronome, music, BPM" />
-    <meta name="author" content="Jeon Jaewon" />
     <meta
-      property="og:title"
-      content="Simple Online Metronome - Free & Accurate"
+      name="keywords"
+      content="metronome, web metronome, music, BPM, guitar scales, guitar, instruments"
     />
+    <meta name="author" content="Jeon Jaewon" />
+    <meta property="og:title" content="Simple Online Metronome" />
     <meta
       property="og:description"
       content="A free, simple, lightweight online metronome with everything you need for practicing music. Accurate BPM and easy to use. Also provides a guitar scale chart."
